Colaboratory를 통해 생성됨

--- a/Untitled2.ipynb
+++ b/Untitled2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMtmV0hHFGpZRChrw/mnCCE",
+      "authorship_tag": "ABX9TyP6MTyR/DFg9bwZsa2b5RIJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -172,6 +172,33 @@
           "name": "stdout",
           "text": [
             "1 loop, best of 5: 335 ms per loop\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "total = 0\n",
+        "for i in range(1000):\n",
+        "  for j in range(1000):\n",
+        "    total += i * (-1) ** j\n",
+        "print(total)    "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yxeb7kMuMyh7",
+        "outputId": "cdaf0328-45bb-4081-ac7a-f78697db88e2"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n"
           ]
         }
       ]
