Colaboratory를 통해 생성됨

--- a/Untitled2.ipynb
+++ b/Untitled2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP6MTyR/DFg9bwZsa2b5RIJ",
+      "authorship_tag": "ABX9TyMi2eS9u0HmQb8ZczGRHl+4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -228,6 +228,33 @@
           "name": "stdout",
           "text": [
             " "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "total=0\n",
+        "for i in range(5):\n",
+        "    L=[j^(j>>i)for j in range(5)]\n",
+        "    total+=sum(L)\n",
+        "print(total)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LtjcUxjkQHMg",
+        "outputId": "e0bb45a7-e55c-46fe-8e5b-97fd55efb436"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "43\n"
           ]
         }
       ]
